Manuals/LJV_communication_library1_3/20130301_1_3_0_0 x86/ja/Sample/C#/Sample/Source/Sample/NativeMethods.cs


	/// <summary>
	/// ストレージデータ取得返信構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_STORAGE_RSP
	{
		/// <summary>読み出し開始するストレージ番号</summary>
		public uint dwStartNo;
		/// <summary>読み出し点数</summary>
		public uint dwDataCnt;
		/// <summary>基準時刻</summary>
		public LJV7IF_TIME stBaseTime;
	};
	/// <summary>
	/// バッチプロファイルストレージ取得返信構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_BATCH_PROFILE_STORAGE_RSP
	{
		/// <summary>読み出しバッチ番号</summary>
		public uint dwGetBatchNo;
		/// <summary>読み出バッチ内のプロファイル数</summary>
		public uint dwGetBatchProfCnt;
		/// <summary>バッチ内の読み出し開始プロファイル番号</summary>
		public uint dwGetBatchTopProfNo;
		/// <summary>読み出しプロファイル点数</summary>
		public byte byGetProfCnt;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public byte[] reserve;
		/// <summary>基準時刻</summary>
		public LJV7IF_TIME stBaseTime;
	};

	/// <summary>
	/// 高速通信開始準備要求構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_HIGH_SPEED_PRE_START_REQ
	{
		/// <summary>送信開始位置</summary>
		public byte bySendPos;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public byte[] reserve;
	};

	#endregion

	/// <summary>
	/// 高速通信用コールバック関数
	/// </summary>
	/// <param name="buffer">受信プロファイルデータのポインタ</param>
	/// <param name="size">1プロファイルのBYTE単位のサイズ</param>
	/// <param name="count">プロファイル数</param>
	/// <param name="notify">終了条件</param>
	/// <param name="user">スレッドID</param>
	[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
	public delegate void HightSpeedDataCallBack(IntPtr buffer, uint size, uint count, uint notify, uint user);

	/// <summary>
	/// DLL関数呼び出し用クラス
	/// </summary>	
	internal static class NativeMethods
	{
		/// <summary>
		/// 測定結果数の固定値
		/// </summary>
		internal static int MesurementDataCount
		{
			get { return 16; }
		}

		/// <summary>
		/// DLL初期化
		/// </summary>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_Initialize();

		/// <summary>
		/// DLL終了処理
		/// </summary>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_Finalize();

		/// <summary>
		/// DLLバージョン取得
		/// </summary>
		/// <returns>DLLバージョン</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern uint LJV7IF_GetVersion();

		/// <summary>
		/// USB通信接続
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_UsbOpen(int lDeviceId);

		/// <summary>
		/// Ethernet通信接続
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="ethernetConfig">Ethernet設定</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_EthernetOpen(int lDeviceId, ref LJV7IF_ETHERNET_CONFIG ethernetConfig);

		/// <summary>
		/// 通信経路切断
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_CommClose(int lDeviceId);

		/// <summary>
		/// コントローラ再起動
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_RebootController(int lDeviceId);

		/// <summary>
		/// 工場出荷状態へ戻す
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_RetrunToFactorySetting(int lDeviceId);

		/// <summary>
		/// システムエラー情報取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byRcvMax">システムエラー情報を最大何個まで受け取るか</param>
		/// <param name="pbyErrCnt">システムエラー情報の数を受け取るためのバッファ</param>
		/// <param name="pwErrCode">システムエラー情報の格納先</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetError(int lDeviceId, byte byRcvMax, ref byte pbyErrCnt, IntPtr pwErrCode);

		/// <summary>
		/// システムエラー解除
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="wErrCode">解除するエラーコード</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_ClearError(int lDeviceId, short wErrCode);

		/// <summary>
		/// トリガ発行
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_Trigger(int lDeviceId);

		/// <summary>
		/// バッチ測定開始
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_StartMeasure(int lDeviceId);

		/// <summary>
		/// バッチ測定終了
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_StopMeasure(int lDeviceId);

		/// <summary>
		/// オートゼロ
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byOnOff">ON/OFF要求(0：OFF/0以外：ON)</param>
		/// <param name="dwOut">処理対象とするＯＵＴをビットで指定する</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_AutoZero(int lDeviceId, byte byOnOff, uint dwOut);

		/// <summary>
		/// タイミング
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byOnOff">ON/OFF要求(0：OFF/0以外：ON)</param>
		/// <param name="dwOut">処理対象とするＯＵＴをビットで指定する</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_Timing(int lDeviceId, byte byOnOff, uint dwOut);

		/// <summary>
		/// リセット
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="dwOut">処理対象とするＯＵＴをビットで指定する</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_Reset(int lDeviceId, uint dwOut);

		/// <summary>
		/// メモリクリア
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_ClearMemory(int lDeviceId);

		/// <summary>
		/// 設定送信
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byDepth">設定値を、どの階層まで反映させるか</param>
		/// <param name="TargetSetting">送信対象とする項目</param>
		/// <param name="pData">送信する設定データ</param>
		/// <param name="dwDataSize">pDataのBYTE単位でのサイズ</param>
		/// <param name="pdwError">設定詳細エラー</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_SetSetting(int lDeviceId, SettingDepth byDepth, LJV7IF_TARGET_SETTING TargetSetting,
			IntPtr pData, uint dwDataSize, ref uint pdwError);

		/// <summary>
		/// 設定取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byDepth">読み出す階層</param>
		/// <param name="TargetSetting">読み出す設定項目</param>
		/// <param name="pData">読み出した設定の格納先</param>
		/// <param name="dwDataSize">pDataのBYTE単位でのサイズ</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetSetting(int lDeviceId, SettingDepth byDepth, LJV7IF_TARGET_SETTING TargetSetting, 
			IntPtr pData, uint dwDataSize);

		/// <summary>
		/// ^設定初期化
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byDepth">初期化する設定の階層</param>
		/// <param name="byTarget">初期化する設定</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_InitializeSetting(int lDeviceId, byte byDepth, byte byTarget);

		/// <summary>
		/// 変更用設定の反映要求
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byDepth">反映先階層</param>
		/// <param name="pdwError">設定詳細エラー</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_ReflectSetting(int lDeviceId, byte byDepth, ref uint pdwError);

		/// <summary>
		/// 変更用設定の更新
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byDepth">反映元設定</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_RewriteTemporarySetting(int lDeviceId, byte byDepth);

		/// <summary>
		/// 保存用領域への保存処理状況確認
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pbyBusy">保存処理状況(0以外:不揮発メモリへアクセス中、0:アクセス中ではない)</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_CheckMemoryAccess(int lDeviceId, ref byte pbyBusy);

		/// <summary>
		/// 日時設定
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="time">設定する日時</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_SetTime(int lDeviceId, ref LJV7IF_TIME time);

		/// <summary>
		/// 日時取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="time">取得日時</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetTime(int lDeviceId, ref LJV7IF_TIME time);

		/// <summary>
		/// プログラム切り換え
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="byProgNo">切り替えるプログラムNo</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_ChangeActiveProgram(int lDeviceId, byte byProgNo);

		/// <summary>
		/// アクティブプログラムＮｏ．取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pbyProgNo">アクティブプログラムNo</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetActiveProgram(int lDeviceId, ref byte pbyProgNo);

		/// <summary>
		/// 測定結果取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pMeasureData">測定結果</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetMeasurementValue(int lDeviceId, [Out]LJV7IF_MEASURE_DATA[] pMeasureData);

		/// <summary>
		/// プロファイル取得（動作モード"高速（プロファイルのみ）"）
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">取得プロファイル情報</param>
		/// <param name="pRsp">プロファイル取得結果</param>
		/// <param name="pProfileInfo">プロファイル情報</param>
		/// <param name="pdwProfileData">プロファイルデータ</param>
		/// <param name="dwDataSize">pdwProfileDataのBYTE単位のサイズ</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetProfile(int lDeviceId, ref LJV7IF_GET_PROFILE_REQ pReq,
			ref LJV7IF_GET_PROFILE_RSP pRsp, ref LJV7IF_PROFILE_INFO pProfileInfo, IntPtr pdwProfileData, uint dwDataSize);

		/// <summary>
		/// バッチプロファイル取得（動作モード"高速（プロファイルのみ）"）
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">取得プロファイル指定情報</param>
		/// <param name="pRsp">バッチプロファイル取得結果</param>
		/// <param name="pProfileInfo">プロファイル情報</param>
		/// <param name="pdwBatchData">プロファイルデータ</param>
		/// <param name="dwDataSize">pdwBatchDataのBYTE単位のサイズ</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetBatchProfile(int lDeviceId, ref LJV7IF_GET_BATCH_PROFILE_REQ pReq,
			ref LJV7IF_GET_BATCH_PROFILE_RSP pRsp, ref LJV7IF_PROFILE_INFO pProfileInfo,
			IntPtr pdwBatchData, uint dwDataSize);
